[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cartpole"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
  "mujoco==3.2.2",
  "numpy>=1.20.0",
  "torch>=1.9.0",
  "Pillow>=9.0.0",
  "casadi>=3.6.0",
  "stable-baselines3>=2.0.0",
  "gymnasium>=0.29.0"
]

[tool.setuptools.packages.find]
include = ["cartpole*"]
exclude = ["imgs*"]

[project.optional-dependencies]
dev = []

[project.scripts]
cartpole = "cartpole.cartpole:main"
train-dqn = "cartpole.agents.dqn:main"
